Updated meal selection UI

--- a/react-backend/client/src/components/Navbar/Navbar.css
+++ b/react-backend/client/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     display: flex;
     /* padding: 0px 20px; */
-    background:#222;
+    background:#29BF89;
     color: #fff !important;
     border-radius: 0 !important;
     font-size: 0.9em;
