--- a/react-backend/client/src/components/Week/Week.css
+++ b/react-backend/client/src/components/Week/Week.css
@@ -1,13 +1,38 @@
 .week-container {
-    top: 100px;
-    padding: 80px 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .totals-container {
-    font-size: 5vh;
+    font-size: 3vh;
     text-align: left;
     color: #0083BB;
-    padding-left: 10vw;
+    /* padding-left: 10vw; */
+    resize: horizontal;
+    display: flex;
+}
+
+/* .item {
+    margin: 1em;
+    padding: 0.5em;
+    vertical-align: middle;
+}
+.auto {
+    flex: auto;
+}
+
+.person {
+    padding: 2vh 0;
+    max-width: 5vw;
+    flex-direction: column;
+} */
+
+.input-title {
+    flex: auto;
+    max-width: 8vw;
+}
+
+.input-input > input {
+    flex: auto;
+    max-width: 8vw;
 }
