Resize trip table

--- a/react-backend/client/src/components/GroceryTrip/GroceryTrip.css
+++ b/react-backend/client/src/components/GroceryTrip/GroceryTrip.css
@@ -3,3 +3,10 @@ body {
     font-weight: 300;
     font-size: 14px;
   }
+
+.tablesize {
+  margin: 20px 5px;
+  height: 70vh;
+  width: 50vw;
+  min-width: 400px;
+}
