--- a/react-backend/client/src/components/Schedule/Schedule.css
+++ b/react-backend/client/src/components/Schedule/Schedule.css
@@ -1,3 +1,5 @@
+
+
 .clicked {
     background-color: #29BF89; /* Green */
     border: none;
@@ -25,3 +27,11 @@
     width: 7vw;
     min-width: 80px;
 }
+
+.container {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 5vh;
+}
+
