--- a/react-backend/client/src/components/Schedule/Schedule.css
+++ b/react-backend/client/src/components/Schedule/Schedule.css
@@ -28,10 +28,20 @@
     min-width: 80px;
 }
 
-.container {
+.meals-container {
     display:flex;
     flex-direction: row;
     justify-content: center;
     margin-top: 5vh;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5vh;
+}
+
+.week-heading {
+    font-size: 2em;
 }
 
