Add Person to Meal Schedule functionality updated. Properly adding to db and button colors appear correctly.

--- a/react-backend/client/src/components/Schedule/Schedule.css
+++ b/react-backend/client/src/components/Schedule/Schedule.css
@@ -28,7 +28,7 @@
     min-width: 80px;
 }
 
-.meals-container {
+.week-meals-container {
     display:flex;
     flex-direction: row;
     justify-content: center;
