--- a/react-backend/client/src/components/Recipe/Recipe.css
+++ b/react-backend/client/src/components/Recipe/Recipe.css
@@ -9,9 +9,22 @@ textarea {
 }
 
 .recipe-input {
-    margin: 0 15vw;
+    /* margin: 0 15vw; */
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    width: 25%;
 }
 
 .recipe-output {
-    margin-right: 15vw;
+    /* margin-right: 15vw; */
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    width: 25%;
+}
+
+.recipe-ingredient {
+    width: 100%;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
