--- a/react-backend/client/src/components/Recipe/Recipe.css
+++ b/react-backend/client/src/components/Recipe/Recipe.css
@@ -26,5 +26,10 @@ textarea {
     width: 100%;
     display:flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
+}
+
+.recipe-ingredient-item {
+    text-align: left;
+    width: 33%;
 }
